# lon-mirror

./: .gitignore  404.html  ARCHITECTURE_BOUNDARY.md  ARCHITECTURE_CONTRACT.md  CITATION.bib  CITATION.cff  COLAB.md  COMPARATIVE_ARTIFACT.md  COMPARATIVE_NOTE.md  ECOSYSTEM.md  FACT_CHECK_ENGINE_v0.1.py  FILE A – Scientific paper (.tex)  dual_echo_consciousness.tex  FILE C – Manifesto Visionario   Grok-specific verification benchmarks  INFERENCE_FREEZE.md  INTERFACE.md  LANDING_SCOPE.md  LICENSE  LON_EXTERNAL_NODE.md  La percezione del IO  MB-X.01_Translational_Whitepaper.html  MBX-ConvergenceLoop  OMNIA-CRYPTO-STRUCT  OMNIA_FACT_BENCHMARK_v0.1.py  OMNIA_LENSES_v0.1.md  OMNIA_MINIMAL_INTERFACE.md  OMNIA_SIMULTANEOUS_REFERENCE.md  OMNIA_SLIDE.md  OMNIA_TOTALE_API_v1.0.py  OMNIA_TOTALE_BENCHMARK_REPORT_v1.0.md  OMNIA_TOTALE_BENCHMARK_v1.0.py  OMNIA_TOTALE_EVAL_REPORT_v1.0.md  OMNIA_TOTALE_GSM8K_EVAL_v0.1.py  OMNIA_TOTALE_GSM8K_FULL_v0.1.py  OMNIA_TOTALE_INTERNAL_IFACE_v0.1.py  OMNIA_TOTALE_LLM_INTEGRATION_v0.1.py  OMNIA_TOTALE_MULTIMODEL_EVAL_v0.2.py  OMNIA_TOTALE_OMEGA_LENS_v1.0.py  OMNIA_TOTALE_REPORT_v0.1.md  OMNIA_TOTALE_REPORT_v0.2.md  (+109 more)
FILE B – Technical /:  speculativo  dual_ai_superposition_experiment.tex
ICE/: OMNIA_ICE_v0_1.py  __init__.py
LCR/: LCR_BENCHMARK_v0.1.py  LCR_CORE_v0.1.py  LCR_README_v0.1.md  README.md
OMNIA_Supdocs/: SUPERPOSITION_OPERATOR.mdgit
adapters/: llm_output_adapter.py
analysis/: README_omniabase3d.md  omniabase3d_engine.py
archive/: OMNIA_TOTALE_REPORT_v0.1.md
benchmarks/: gsm8k_benchmark_demo.py  gsm8k_eval_full.py  (+3 more)
(+228 files in other folders)
